Rename to adnatools. Switch to Java 17. Update dependencies. AlignmentComparison utility for CRAM/BAM/SAM checking. Test exceptions in JUnit 4.13 style.